@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Entity parent="template_structure_fert_wonder">
+  <Footprint replace="">
+    <Circle radius="30.0"/>
+    <Height>20.0</Height>
+  </Footprint>
+  <Identity>
+    <Civ>brit</Civ>
+    <SpecificName>Emain Macha</SpecificName>
+  </Identity>
+  <Obstruction>
+    <Static width="55.0" depth="55.0"/>
+  </Obstruction>
+  <VisualActor>
+    <FoundationActor>structures/fndn_stonehenge.xml</FoundationActor>
+    <Actor>structures/britons/wonder.xml</Actor>
+  </VisualActor>
+</Entity>
