@@ -1,0 +1,88 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Entity parent="template_structure">
+  <Auras datatype="tokens">
+    structures/wonder_population_cap
+  </Auras>
+  <BuildRestrictions>
+    <Category>Wonder</Category>
+  </BuildRestrictions>
+  <Capturable>
+    <CapturePoints op="mul">4</CapturePoints>
+  </Capturable>
+  <Cost>
+    <BuildTime>1000</BuildTime>
+    <Resources>
+      <wood>1000</wood>
+      <stone>1500</stone>
+      <metal>1000</metal>
+    </Resources>
+  </Cost>
+  <Footprint>
+    <Square width="34.0" depth="34.0"/>
+    <Height>10.0</Height>
+  </Footprint>
+  <GarrisonHolder>
+    <Max>50</Max>
+    <EjectHealth>0.1</EjectHealth>
+    <EjectClassesOnDestroy datatype="tokens">Unit</EjectClassesOnDestroy>
+    <List datatype="tokens">Support Soldier</List>
+    <BuffHeal>5</BuffHeal>
+    <LoadingRange>2</LoadingRange>
+  </GarrisonHolder>
+  <Health disable=""/>
+  <Identity>
+    <GenericName>Wonder</GenericName>
+    <SelectionGroupName>template_structure_wonder</SelectionGroupName>
+    <Tooltip>Bring glory to your civilization and add large tracts of land to your empire.</Tooltip>
+    <Classes datatype="tokens">ConquestCritical</Classes>
+    <VisibleClasses datatype="tokens">City Wonder</VisibleClasses>
+    <Icon>structures/wonder.png</Icon>
+    <RequiredTechnology>phase_city</RequiredTechnology>
+  </Identity>
+  <Loot>
+    <wood>200</wood>
+    <stone>300</stone>
+    <metal>200</metal>
+  </Loot>
+  <Minimap>
+    <Type>structure</Type>
+    <Icon size="16.0">wonder.png</Icon>
+  </Minimap>
+  <Obstruction>
+    <Static width="30.0" depth="30.0"/>
+  </Obstruction>
+  <ProductionQueue/>
+  <Researcher>
+    <Technologies datatype="tokens">
+      wonder_population_cap
+    </Technologies>
+  </Researcher>
+  <Resistance replace=""/>
+  <ResourceTrickle>
+    <Rates>
+      <food>1.0</food>
+      <wood>1.0</wood>
+      <stone>1.0</stone>
+      <metal>1.0</metal>
+    </Rates>
+    <Interval>2000</Interval>
+  </ResourceTrickle>
+  <Sound>
+    <SoundGroups>
+      <select>interface/select/building/sel_wonder.xml</select>
+      <constructed>interface/complete/building/complete_wonder.xml</constructed>
+    </SoundGroups>
+  </Sound>
+  <TerritoryInfluence>
+    <Root>true</Root>
+    <Radius>100</Radius>
+    <Weight>65535</Weight>
+  </TerritoryInfluence>
+  <Vision>
+    <Range>72</Range>
+  </Vision>
+  <VisualActor>
+    <FoundationActor>structures/fndn_9x9.xml</FoundationActor>
+  </VisualActor>
+  <Wonder/>
+</Entity>
