@@ -1,6 +1,7 @@
 2022-07-10
 
     * maps/random/plague_swamp.js:remove triggers, remove insects
+    * The wonder on Fert maps are now capturable by mobile units
 
 2022-07-09
 
